# pal-router

./: .env.example  .gitignore  README.md  pyproject.toml
data/: training_queries.json
eval/: VALIDATION_REPORT.md  calibrate_complexity.py  research_validation_suite.py  run_eval.py  test_suite.json
examples/: basic_usage.py  cost_comparison.py  interactive_demo.py  test_gemini.py  test_providers.py  test_router_gemini.py  test_router_groq.py
models/router_classifier/: classifier.pkl  label_encoder.pkl  metrics.json
scripts/: add_edge_cases.py  augment_training_data.py  benchmark_latency.py  compare_routers.py  convert_test_suite.py  create_clean_split.py  generate_training_data.py  generate_with_groq.py  test_real_api.py  test_routing_only.py  train_router_classifier.py
src/pal_router/: __init__.py  agentic.py  complexity.py  config.py  embeddings.py  models.py  presets.py  router.py  trained_router.py  types.py
tests/: __init__.py  test_agentic.py  test_complexity.py  test_router.py
